Add missing Qt5Concurrent
Implicit use via KIO.

See also: https://invent.kde.org/frameworks/kio/-/merge_requests/426

Signed-off-by: Andreas Sturmlechner <asturm@gentoo.org>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,6 +40,7 @@ add_definitions(-DQT_NO_URL_CAST_FROM_STRING -DQT_NO_CAST_FROM_ASCII -DQT_NO_FOR
 find_package(
     Qt5 ${QT_MIN_VERSION} CONFIG REQUIRED
         Core
+        Concurrent
         Widgets
         DBus
         PrintSupport
