Load translations for kImageAnnotator

--- a/src/Config.h.in
+++ b/src/Config.h.in
@@ -16,4 +16,7 @@
 /* Define to 1 if we have kImageAnnotator */
 #cmakedefine KIMAGEANNOTATOR_FOUND 1
 
+/* Define the minor version of kImageAnnotator */
+#cmakedefine KIMAGEANNOTATOR_CAN_LOAD_TRANSLATIONS 1
+
 #endif
