--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ cmake_minimum_required (VERSION 3.16 FATAL_ERROR)
 project(Spectacle VERSION ${SPECTACLE_VERSION})
 
 set(QT_MIN_VERSION     "5.15.0")
-set(KF5_MIN_VERSION    "5.73.0")
+set(KF5_MIN_VERSION    "5.89.0")
 
 find_package(ECM ${KF5_MIN_VERSION} REQUIRED NO_MODULE)
 set(CMAKE_MODULE_PATH ${ECM_MODULE_PATH})
@@ -66,6 +66,7 @@ find_package(
         GlobalAccel
         XmlGui
         Wayland
+        GuiAddons
 )
 
 # optional components
