--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -19,4 +19,4 @@ Dependencies:
     'frameworks/kxmlgui': '@stable'
     'frameworks/kwayland': '@stable'
     'frameworks/purpose': '@stable'
-    'graphics/libkipi': '@stable'
+    'graphics/libkipi': '@same'
