Check for min version of kImageAnnotator

--- a/src/Config.h.in
+++ b/src/Config.h.in
@@ -16,4 +16,7 @@
 /* Define the minor version of kImageAnnotator */
 #cmakedefine KIMAGEANNOTATOR_CAN_LOAD_TRANSLATIONS 1
 
+/* Define the minor version of kImageAnnotator */
+#cmakedefine KIMAGEANNOTATOR_HAS_EXTRA_TOOLS 1
+
 #endif
