Add feature to annotate existing screenshots
Can be accessed:
* Using a button in the notification, if saved to file
* From the new CLI flag `--edit-existing <file>`

BUG: 431257
FIXED-IN: 22.04

--- a/dbus/app-org.kde.spectacle.service.in
+++ b/dbus/app-org.kde.spectacle.service.in
@@ -4,3 +4,4 @@ Description=Spectacle screenshot capture utility
 [Service]
 ExecStart=@CMAKE_INSTALL_PREFIX@/bin/spectacle --dbus
 BusName=org.kde.Spectacle
+KillMode=process
