GIT_SILENT: it compiles fine without deprecated methods

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,7 +38,8 @@ include(KDEClangFormat)
 include(KDEGitCommitHooks)
 
 add_definitions(-DQT_NO_URL_CAST_FROM_STRING -DQT_NO_CAST_FROM_ASCII -DQT_NO_FOREACH)
-
+add_definitions(-DQT_DISABLE_DEPRECATED_BEFORE=0x050c00)
+add_definitions(-DKF_DISABLE_DEPRECATED_BEFORE_AND_AT=0x055800)
 find_package(
     Qt5 ${QT_MIN_VERSION} CONFIG REQUIRED
         Core
