--- a/src/Config.h.in
+++ b/src/Config.h.in
@@ -19,4 +19,7 @@
 /* Define the minor version of kImageAnnotator */
 #cmakedefine KIMAGEANNOTATOR_HAS_EXTRA_TOOLS 1
 
+/* Define the minor version of kImageAnnotator */
+#cmakedefine KIMAGEANNOTATOR_HAS_FIXED_SIZEHINT 1
+
 #endif
