Adapt to QX11Info changes in Qt6

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,7 +76,7 @@ endif()
 
 find_package(XCB COMPONENTS XFIXES IMAGE UTIL CURSOR)
 set(XCB_COMPONENTS_ERRORS FALSE)
-if (XCB_FOUND)
+if (XCB_FOUND AND QT_MAJOR_VERSION STREQUAL "5")
 	find_package(Qt5X11Extras ${QT_MIN_VERSION} REQUIRED)
 endif()
 set(XCB_COMPONENTS_FOUND TRUE)
