Make compile against qt6

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,7 +77,9 @@ endif()
 find_package(XCB COMPONENTS XFIXES IMAGE UTIL CURSOR)
 set(XCB_COMPONENTS_ERRORS FALSE)
 if (XCB_FOUND)
-	find_package(Qt5X11Extras ${QT_MIN_VERSION} REQUIRED)
+    if (QT_MAJOR_VERSION STREQUAL "5")
+        find_package(Qt5X11Extras ${QT_MIN_VERSION} REQUIRED)
+    endif()
 endif()
 set(XCB_COMPONENTS_FOUND TRUE)
 if(NOT XCB_XFIXES_FOUND)
@@ -97,8 +99,9 @@ if(NOT XCB_CURSOR_FOUND)
 	set(XCB_COMPONENTS_FOUND FALSE)
 endif()
 
-find_package(kImageAnnotator)
-
+if (QT_MAJOR_VERSION STREQUAL "5") # For the moment kImageAnnotator is not ported to qt6
+    find_package(kImageAnnotator)
+endif()
 if(kImageAnnotator_FOUND)
     find_package(X11 REQUIRED)
     find_package(kColorPicker REQUIRED)
