--- a/icons/CMakeLists.txt
+++ b/icons/CMakeLists.txt
@@ -3,12 +3,7 @@
 
 ecm_install_icons(
     ICONS
-        16-apps-spectacle.png
-        22-apps-spectacle.png
-        32-apps-spectacle.png
-        48-apps-spectacle.png
-        sc-apps-spectacle.svgz
+        org.kde.spectacle.svg
     DESTINATION ${KDE_INSTALL_ICONDIR}
     THEME hicolor
 )
-
