--- a/icons/CMakeLists.txt
+++ b/icons/CMakeLists.txt
@@ -3,7 +3,7 @@
 
 ecm_install_icons(
     ICONS
-        org.kde.spectacle.svg
+        sc-apps-spectacle.svg
     DESTINATION ${KDE_INSTALL_ICONDIR}
     THEME hicolor
 )
