Port and rework UI for Qt Quick/QML
There are still some parts that use Qt Widgets, such as the settings dialog, font dialog, color dialog, print dialog and popup menus. The Qt Quick port is needed for a future patch where screen recording will be added and it also allows more animations to be used. The UI was redesigned, partly because the old UI couldn't be ported nicely to QML and partly to improve the appearance of the UI.

There are 2 window classes for the main UIs. CaptureWindow is used for the rectangle capture mode and ViewerWindow is used for the other modes and viewing accepted regions from the rectangle capture mode. Both UIs support adding annotations.

Fullscreen Capture UI:

The UI is a lot like the old UI, but there are floating toolbars that expose more functionality.

- Annotations, saving, copying and taking a new snapshot can be done directly.
- Export, Options and Help menus can be accessed directly.
- Info box no longer covers or overlaps with selection handles.
- Antialiasing for selection handles is fixed.
- Each screen now has its own fullscreen window, which fixes some issues on Wayland and X11.

Image Viewer UI (appears after a screenshot has been taken):

- Main controls are consolidated into a single top toolbar: Save, Save As, Copy, Export (opens popup menu), Show Annotation Tools, Configure (opens settings dialog), Help (opens popup menu)
- There is a right sidebar for selecting capture modes and related options that were in the old UI.
- The whole UI doesn't completely transform when annotation controls are shown anymore. Instead, a vertical left side toolbar (tools) and a bottom toolbar (tool options) are added and the right sidebar slides away. Undo and Redo are added to the top toolbar.
- It should be easier to understand the annotation UI now.
- Annotations done in the Fullscreen Capture UI can still be undone/redone in the Image Viewer UI.

No screenshot taken UI (appears when configured to start without taking a screenshot):

- 

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,6 +40,10 @@ find_package(
     Qt${QT_MAJOR_VERSION} ${QT_MIN_VERSION} CONFIG REQUIRED
         Core
         Concurrent
+        Qml
+        Quick
+        QuickControls2
+        QuickTemplates2
         Widgets
         DBus
         PrintSupport
@@ -62,6 +66,7 @@ find_package(
         XmlGui
         Wayland
         GuiAddons
+        Kirigami2
 )
 # optional components
 find_package(KF5DocTools ${KF5_MIN_VERSION})
@@ -97,24 +102,6 @@ endif()
 if(NOT XCB_CURSOR_FOUND)
 	set(XCB_COMPONENTS_ERRORS "${XCB_COMPONENTS_ERRORS} XCB-CURSOR ")
 	set(XCB_COMPONENTS_FOUND FALSE)
-endif()
-
-if (QT_MAJOR_VERSION STREQUAL "5") # For the moment kImageAnnotator is not ported to qt6
-    find_package(kImageAnnotator)
-endif()
-if(kImageAnnotator_FOUND)
-    find_package(X11 REQUIRED)
-    find_package(kColorPicker REQUIRED)
-    set(KIMAGEANNOTATOR_FOUND 1)
-    if(NOT kImageAnnotator_VERSION VERSION_LESS 0.5.0)
-        set(KIMAGEANNOTATOR_CAN_LOAD_TRANSLATIONS 1)
-    endif()
-    if(NOT kImageAnnotator_VERSION VERSION_LESS 0.6.0)
-        set(KIMAGEANNOTATOR_HAS_EXTRA_TOOLS 1)
-    endif()
-    if(NOT kImageAnnotator_VERSION VERSION_LESS 0.6.1)
-        set(KIMAGEANNOTATOR_HAS_FIXED_SIZEHINT 1)
-    endif()
 endif()
 
 # add the spectacle.upd file
