--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,7 +4,7 @@ configure_file(Config.h.in ${CMAKE_CURRENT_BINARY_DIR}/Config.h)
 
 # target
 
-kconfig_add_kcfg_files(SPECTACLE_SRCS Gui/SettingsDialog/settings.kcfgc)
+kconfig_add_kcfg_files(SPECTACLE_SRCS GENERATE_MOC Gui/SettingsDialog/settings.kcfgc)
 
 ecm_qt_declare_logging_category(SPECTACLE_SRCS HEADER spectacle_core_debug.h IDENTIFIER SPECTACLE_CORE_LOG CATEGORY_NAME org.kde.spectacle.core DESCRIPTION "spectacle (core)" EXPORT SPECTACLE)
 ecm_qt_declare_logging_category(SPECTACLE_SRCS HEADER spectacle_gui_debug.h IDENTIFIER SPECTACLE_GUI_LOG CATEGORY_NAME org.kde.spectacle.gui DESCRIPTION "spectacle (gui)" EXPORT SPECTACLE)
@@ -12,48 +12,37 @@ ecm_qt_declare_logging_category(SPECTACLE_SRCS HEADER spectacle_gui_debug.h IDEN
 add_executable(spectacle
     ${SPECTACLE_SRCS}
     Main.cpp
+    CaptureModeModel.cpp
     ExportManager.cpp
     SpectacleCore.cpp
     SpectacleDBusAdapter.cpp
     ShortcutActions.cpp
-    Gui/KSMainWindow.cpp
-    Gui/KSWidget.cpp
-    Gui/KSImageWidget.cpp
+    Gui/CaptureWindow.cpp
     Gui/ExportMenu.cpp
-    Gui/ProgressButton.cpp
-    Gui/CaptureAreaComboBox.cpp
+    Gui/HelpMenu.cpp
+    Gui/OptionsMenu.cpp
     Gui/SmartSpinBox.cpp
+    Gui/Selection.cpp
+    Gui/SelectionEditor.cpp
+    Gui/SpectacleImageProvider.cpp
+    Gui/SpectacleWindow.cpp
+    Gui/SpectacleMenu.cpp
+    Gui/ViewerWindow.cpp
+    Gui/Annotations/AnnotationDocument.cpp
+    Gui/Annotations/AnnotationViewport.cpp
+    Gui/Annotations/EditAction.cpp
+    Gui/Annotations/Utils.cpp
     Gui/SettingsDialog/SaveOptionsPage.cpp
     Gui/SettingsDialog/SettingsDialog.cpp
     Gui/SettingsDialog/GeneralOptionsPage.cpp
     Gui/SettingsDialog/ShortcutsOptionsPage.cpp
-    QuickEditor/QuickEditor.cpp
     Platforms/PlatformLoader.cpp
     Platforms/Platform.cpp
     Platforms/PlatformNull.cpp
     Platforms/PlatformKWinWayland.cpp
     Platforms/PlatformKWinWayland2.cpp
 
-    ExportManager.h
-    SpectacleCore.h
-    SpectacleDBusAdapter.h
-    ShortcutActions.h
-    Gui/KSMainWindow.h
-    Gui/KSWidget.h
-    Gui/KSImageWidget.h
-    Gui/ExportMenu.h
-    Gui/ProgressButton.h
-    Gui/SmartSpinBox.h
-    Gui/SettingsDialog/SaveOptionsPage.h
-    Gui/SettingsDialog/SettingsDialog.h
-    Gui/SettingsDialog/GeneralOptionsPage.h
-    Gui/SettingsDialog/ShortcutsOptionsPage.h
-    QuickEditor/QuickEditor.h
-    Platforms/PlatformLoader.h
-    Platforms/Platform.h
-    Platforms/PlatformNull.h
-    Platforms/PlatformKWinWayland.h
-    Platforms/PlatformKWinWayland2.h
+    ../resources.qrc
     )
 
 if(XCB_FOUND)
@@ -76,10 +65,6 @@ if(PURPOSE_FOUND)
     target_link_libraries(spectacle KF5::PurposeWidgets)
 endif()
 
-if(KIMAGEANNOTATOR_FOUND)
-    target_link_libraries(spectacle kImageAnnotator::kImageAnnotator)
-endif()
-
 ki18n_wrap_ui(spectacle Gui/SettingsDialog/GeneralOptions.ui Gui/SettingsDialog/SaveOptions.ui)
 
 target_link_libraries(
@@ -87,6 +72,10 @@ target_link_libraries(
         Qt::Concurrent
         Qt::DBus
         Qt::PrintSupport
+        Qt::Qml
+        Qt::Quick
+        Qt::QuickControls2
+        Qt::QuickTemplates2
         KF5::CoreAddons
         KF5::DBusAddons
         KF5::WidgetsAddons
