--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,12 +2,14 @@ include_directories(${PROJECT_SOURCE_DIR}/src)
 
 SET(FILENAME_TEST_SRCS
     FilenameTest.cpp
+    ../src/CaptureModeModel.cpp
+    ../src/ShortcutActions.cpp
     ../src/ExportManager.cpp
     ../src/Platforms/Platform.cpp
 )
 
 
-kconfig_add_kcfg_files(FILENAME_TEST_SRCS ${PROJECT_SOURCE_DIR}/src/Gui/SettingsDialog/settings.kcfgc)
+kconfig_add_kcfg_files(FILENAME_TEST_SRCS GENERATE_MOC ${PROJECT_SOURCE_DIR}/src/Gui/SettingsDialog/settings.kcfgc)
 
 ecm_add_test(
     ${FILENAME_TEST_SRCS}
