Use ecm_set_disabled_deprecation_versions directly

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ cmake_minimum_required (VERSION 3.16 FATAL_ERROR)
 project(Spectacle VERSION ${SPECTACLE_VERSION})
 
 set(QT_MIN_VERSION     "5.15.2")
-set(KF5_MIN_VERSION    "5.90.0")
+set(KF5_MIN_VERSION    "5.92.0")
 
 find_package(ECM ${KF5_MIN_VERSION} REQUIRED NO_MODULE)
 set(CMAKE_MODULE_PATH ${ECM_MODULE_PATH})
@@ -33,6 +33,7 @@ include(ECMAddTests)
 include(ECMQueryQmake)
 include(KDEClangFormat)
 include(KDEGitCommitHooks)
+include(ECMDeprecationSettings)
 
 # find dependencies
 
@@ -121,12 +122,7 @@ else()
 endif()
 # setup handling of deprecated Qt & KF API
 
-add_definitions(
-    -DQT_DISABLE_DEPRECATED_BEFORE=0x050c00
-    -DQT_DEPRECATED_WARNINGS_SINCE=0x060000
-    -DKF_DISABLE_DEPRECATED_BEFORE_AND_AT=0x055900
-    -DKF_DEPRECATED_WARNINGS_SINCE=0x060000
-)
+ecm_set_disabled_deprecation_versions(QT 5.15.2  KF 5.100.0)
 
 # hand off to subdirectories
 
