Mark Spectacle as DBusActivatable
This reduces the steps others need to take to start and/or trigger
an Action.
For instance now it will be a direct request from kglobalccel to
dbus-daemon to activate spectacle.
As per the spec, the dbus name matching the desktop file must be
activatable.

--- a/dbus/CMakeLists.txt
+++ b/dbus/CMakeLists.txt
@@ -6,6 +6,12 @@ include(ECMConfiguredInstall)
 ecm_install_configured_files(INPUT app-org.kde.spectacle.service.in DESTINATION ${KDE_INSTALL_SYSTEMDUSERUNITDIR})
 
 ecm_generate_dbus_service_file(
+   NAME org.kde.spectacle
+   EXECUTABLE "${KDE_INSTALL_FULL_BINDIR}/spectacle --dbus"
+   SYSTEMD_SERVICE app-org.kde.spectacle.service
+   DESTINATION ${KDE_INSTALL_DBUSSERVICEDIR}
+)
+ecm_generate_dbus_service_file(
    NAME org.kde.Spectacle
    EXECUTABLE "${KDE_INSTALL_FULL_BINDIR}/spectacle --dbus"
    SYSTEMD_SERVICE app-org.kde.spectacle.service
