Use KDEInstallDirs variable to refer to spectacle binary

--- a/dbus/CMakeLists.txt
+++ b/dbus/CMakeLists.txt
@@ -7,7 +7,7 @@ ecm_install_configured_files(INPUT app-org.kde.spectacle.service.in DESTINATION 
 
 ecm_generate_dbus_service_file(
    NAME org.kde.Spectacle
-   EXECUTABLE "${CMAKE_INSTALL_PREFIX}/bin/spectacle --dbus"
+   EXECUTABLE "${KDE_INSTALL_FULL_BINDIR}/spectacle --dbus"
    SYSTEMD_SERVICE app-org.kde.spectacle.service
    DESTINATION ${KDE_INSTALL_DBUSSERVICEDIR}
 )
