--- a/dbus/app-org.kde.spectacle.service.in
+++ b/dbus/app-org.kde.spectacle.service.in
@@ -2,6 +2,6 @@
 Description=Spectacle screenshot capture utility
 
 [Service]
-ExecStart=@CMAKE_INSTALL_PREFIX@/bin/spectacle --dbus
+ExecStart=@KDE_INSTALL_FULL_BINDIR@/spectacle --dbus
 BusName=org.kde.Spectacle
 KillMode=process
