Introduce interfaces for video recordings
Includes the wayland implementation

--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -19,3 +19,4 @@ Dependencies:
     'frameworks/kxmlgui': '@stable'
     'frameworks/kwayland': '@stable'
     'frameworks/purpose': '@stable'
+    'plasma/kpipewire': '@latest'
