Provide a separate view for videos
What we need after recording a video is different from an image, so let
the UI adapt to it.

Adds a dependency to VLC-Qt's qml component to embed de video.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,7 @@ include(ECMQueryQmake)
 include(KDEClangFormat)
 include(KDEGitCommitHooks)
 include(ECMDeprecationSettings)
+include(ECMQMLModules)
 
 # find dependencies
 
@@ -133,6 +134,9 @@ if (QT_MAJOR_VERSION EQUAL "5")
 else()
     MESSAGE(STATUS "need to find QtBinariesDir")
 endif()
+
+ecm_find_qmlmodule(VLCQt 1.0)
+
 # setup handling of deprecated Qt & KF API
 
 ecm_set_disabled_deprecation_versions(QT 5.15.2  KF 5.100.0)
