Use CommandLineOptions singleton for QCommandLineOption objects
Makes it so the compiler will catch us when we use a wrongly named
option in the code.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,6 +13,7 @@ add_executable(spectacle
     ${SPECTACLE_SRCS}
     Main.cpp
     CaptureModeModel.cpp
+    CommandLineOptions.cpp
     RecordingModeModel.cpp
     ExportManager.cpp
     SpectacleCore.cpp
