Don't delay screenshots if Plasma version is at least 5.27.5

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,6 +16,7 @@ add_executable(spectacle
     CommandLineOptions.cpp
     RecordingModeModel.cpp
     ExportManager.cpp
+    PlasmaVersion.cpp
     SpectacleCore.cpp
     SpectacleDBusAdapter.cpp
     ShortcutActions.cpp
