Warn when screenshot effect isn't available on wayland, exit if no GUI
CCBUG: 451842

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -17,6 +17,7 @@ add_executable(spectacle
     RecordingModeModel.cpp
     ExportManager.cpp
     PlasmaVersion.cpp
+    ScreenShotEffect.cpp
     SpectacleCore.cpp
     SpectacleDBusAdapter.cpp
     ShortcutActions.cpp
