Add wayland to third-party deps

--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -19,6 +19,7 @@ Dependencies:
     'frameworks/kwayland': '@stable'
     'frameworks/purpose': '@stable'
     'plasma/kpipewire': '@latest'
+    'third-party/wayland': '@latest'
 
 - 'on': ['Linux/Qt6', 'FreeBSD/Qt6']
   'require':
@@ -37,3 +38,4 @@ Dependencies:
     'frameworks/kwayland': '@latest-kf6'
     'frameworks/purpose': '@latest-kf6'
     'plasma/kpipewire': '@latest-kf6'
+    'third-party/wayland': '@latest'
